# comp590_research

./: .gitignore  README.md  project_config.example.json  project_config.json  pyproject.toml
outputs/detections/action_clip/original/: edges.json  motion.json
outputs/detections/action_clip/q18_scale100/: edges.json  motion.json
outputs/detections/action_clip/q23_scale075/: edges.json  motion.json
outputs/detections/action_clip/q28_scale050/: edges.json  motion.json
outputs/detections/action_clip/q33_scale033/: edges.json  motion.json
outputs/detections/action_clip/q38_scale020/: edges.json  motion.json
outputs/detections/action_clip/q42_scale010/: edges.json  motion.json
outputs/detections/chill_clip/original/: edges.json  motion.json
outputs/detections/chill_clip/q18_scale100/: edges.json  motion.json
outputs/detections/chill_clip/q23_scale075/: edges.json  motion.json
outputs/detections/chill_clip/q28_scale050/: edges.json  motion.json
outputs/detections/chill_clip/q33_scale033/: edges.json  motion.json
outputs/detections/chill_clip/q38_scale020/: edges.json  motion.json
outputs/detections/chill_clip/q42_scale010/: edges.json  motion.json
outputs/metrics/: summary.csv
src/compression_noise/: __init__.py  algorithms.py  compress.py  config.py  evaluation.py  pipeline.py  visualization.py
tests/: test_evaluation.py
